# ArgumentParse

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: args.h
src/: args.c
test/: test.cpp
